# webrtc-camera

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  main.cpp  vcm_capturer.cc  vcm_capturer.h  windows_capture_test.sln  windows_capture_test.vcxproj  windows_capture_test.vcxproj.filters
3rd/: install.bat
3rd/libjpeg-turbo64/lib/: jpeg-static.lib  jpeg.lib  turbojpeg-static.lib  turbojpeg.lib
3rd/libjpeg-turbo64/lib/cmake/libjpeg-turbo/: libjpeg-turboConfigVersion.cmake
3rd/libjpeg-turbo64/lib/pkgconfig/: libjpeg.pc  libturbojpeg.pc
3rd/libyuv/: .gitignore
3rd/x264-2020/SMP/: libx264.vcxproj
common/: aligned_malloc.cc  aligned_malloc.h  ref_counted_object.h  ref_counter.h  rtc_log.h  scoped_refptr.h  sock_utils.cc  sock_utils.h  string_utils.cc  string_utils.h  system_time.cc  system_time.h  threadqueue.hpp  time_utils.cc  time_utils.h  webrtc_libyuv.cc  webrtc_libyuv.h
core/: device_info_impl.cc  device_info_impl.h  video_capture.h  video_capture_defines.h  video_capture_factory.cc  video_capture_factory.h  video_capture_impl.cc  video_capture_impl.h
rtp_h264/: rtp.cpp  rtp.h  rtp_h264_decoder.cpp  rtp_h264_decoder.h  rtp_h264_def.h  rtp_h264_encoder.cpp  rtp_h264_encoder.h  sock_utils.cpp
test/: sdl_player.cpp  sdl_player.h  x264_encoder.cpp  x264_encoder.h
video_frame/: color_space.cc  color_space.h  hdr_metadata.cc  i420_buffer.cc  i420_buffer.h  i444_buffer.cc  i444_buffer.h  nv12_buffer.cc  nv12_buffer.h  video_frame.cc  video_frame.h  video_frame_buffer.cc  video_frame_buffer.h  video_sink_interface.h  video_track_source_constraints.h
windows/: device_info_ds.cc  device_info_ds.h  help_functions_ds.cc  help_functions_ds.h  sink_filter_ds.cc  sink_filter_ds.h  video_capture_ds.cc  video_capture_ds.h  video_capture_factory_windows.cc
x64/Debug/: yuv.lib
